# OpenGL-Shooter

./: .gitignore  README.md
Shooter/: CMakeLists.txt  camera.cpp  camera.h  icosahedron.cpp  icosahedron.h  main.cpp  shader.cpp  shader.h  sphere.cpp  sphere.h  utilities.cpp  utilities.h
Shooter/shaders/: icosahedron_fragment_shader.glsl  icosahedron_vertex_shader.glsl  sphere_fragment_shader.glsl  sphere_vertex_shader.glsl
